--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://tilpj.github.io/Front-end/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -50,6 +52,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.3.2"
   }
 }
